--- a/WeatherCopilot.React/src/index.html
+++ b/WeatherCopilot.React/src/index.html
@@ -9,7 +9,7 @@
       name="description"
       content="Sample .NET Aspire React weather app."
     />
-    <title>React App</title>
+    <title>Weather Copilot</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
